feat: swagger，jwt的集成完成

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>com.google.guava</groupId>-->
+<!--            <artifactId>guava</artifactId>-->
+<!--            <version>25.1-jre</version>-->
+<!--        </dependency>-->
         <!--mysql连接池-->
         <dependency>
             <groupId>mysql</groupId>
@@ -91,6 +95,13 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.21</version>
+        </dependency>
+
+        <!--Json web token-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
         </dependency>
     </dependencies>
 
