feat: 完成学生相关接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,7 @@ logging:
   level:
     root: info
     com.lbhz,core.dao: debug
+
+file:
+  file-server-path: /Users/libi/Desktop
+  file-server-url: http://101.37.33.46/file/
